bad/assign_var_bool_int.example_compiler_output
ERROR
[1mbad/assign_var_bool_int.lat:5:4: [1;31merror: [0;1massigning to `boolean` from incompatible type `int`[m
	x = 42;
	  [1;32m^[m
